--- a/src/css/flexboxgrid.css
+++ b/src/css/flexboxgrid.css
@@ -2,22 +2,25 @@
  * Removed gutters by default Due to a pixel rounding bug in IE 10+
  * Once Google puts variables back we can use these to customize the grid
 :root {
-  var-half-gutter-width: 0.5rem;
-  var-gutter-compensation: -0.5rem;
-  var-outer-margin: 2rem;
+  --half-gutter-width: 0.5rem;
+  --gutter-compensation: -0.5rem;
+  --outer-margin: 2rem;
+  --breakpoint-lap: 48em;
+  --breakpoint-desk: 62em;
+  --breakpoint-wall: 75em;
 }
 */
 .grid {
-  padding-right: var( outer-margin, 0 );
-  padding-left: var( outer-margin, 0 );
+  padding-right: var( --outer-margin, 0 );
+  padding-left: var( --outer-margin, 0 );
 }
 .row {
   box-sizing: border-box;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  margin-right: var( gutter-compensation, 0 );
-  margin-left: var( gutter-compensation, 0 );
+  margin-right: var( --gutter-compensation, 0 );
+  margin-left: var( --gutter-compensation, 0 );
 }
 .row.reverse {
   flex-direction: row-reverse;
@@ -57,8 +60,8 @@
   flex-direction: column;
   flex-grow: 0;
   flex-shrink: 0;
-  padding-right: var( half-gutter-width, 0 );
-  padding-left: var( half-gutter-width, 0 );
+  padding-right: var( --half-gutter-width, 0 );
+  padding-left: var( --half-gutter-width, 0 );
 }
 .column-auto-wall,
 .column-auto-desk,
@@ -170,7 +173,7 @@
   order: 1;
 }
 
-@media only screen and (min-width: 48em) {
+@media only screen and (min-width: var( --breakpoint-lap, 48em )) {
 
   .column-auto-lap {
     flex-basis: 0%;
@@ -280,7 +283,7 @@
 
 }
 
-@media only screen and (min-width: 62em) {
+@media only screen and (min-width: var( --breakpoint-desk, 62em )) {
 
   .column-auto-desk {
     flex-basis: 0%;
@@ -390,7 +393,7 @@
 
 }
 
-@media only screen and (min-width: 75em) {
+@media only screen and (min-width: var( --breakpoint-wall, 75em )) {
 
   .column-auto-wall {
     flex-basis: 0%;
